--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
 .DS_Store
 logs/
 *.log
+# Environments
+.env
+.env.local
+.env.*.local
+.envrc
+.venv
+env/
 venv/
+ENV/
+env.bak/
+venv.bak/
+# Keep the example env file
+!.env.example
 __pycache__/
 minio-neuralk/
 *.parquet
