--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,21 @@ services:
     networks:
       - neuralk-network
 
+  # Worker service for processing ML jobs
+  worker:
+    build:
+      context: .
+      dockerfile: deploy/docker/worker/Dockerfile
+    container_name: neuralk-worker
+    depends_on:
+      redis:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - neuralk-network
+
 networks:
   neuralk-network:
     driver: bridge
