feat: Add proxy for client component to target Minio container

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,7 @@ MAX_RETRIES=4
 
 # Queue settings
 QUEUE_NAME=default
+
+# Proxy to the Minio docker container - needed for client to use presigned URLs
+MINIO_PROXY_ADDRESS=localhost
+MINIO_PROXY_PORT=9002
