--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,14 +20,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 black isort
+        pip install .[dev]
         
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=100 --statistics
+        flake8 . --count --exit-zero --statistics
         
     - name: Check formatting with Black
       run: |
@@ -51,8 +51,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
-        pip install pytest pytest-cov
+        pip install -e ".[test]"
         
     - name: Setup Docker
       uses: docker/setup-buildx-action@v2
@@ -66,6 +65,10 @@ jobs:
       run: |
         docker-compose up -d
 
+    - name: Run unit tests
+      run: |
+        pytest tests/ --cov=src --cov-report=xml -v
+        
     - name: Run integration tests
       env:
         # Use environment variables for services running in Docker
