--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Python CI
 
 on:
   push:
@@ -17,10 +17,23 @@ jobs:
       with:
         python-version: '3.11'
         
+    - name: Cache pip packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml', '**/setup.py', '**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+          
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install .[dev]
+        
+    - name: Set Python Path
+      run: |
+        echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
+        echo "Setting PYTHONPATH to ${{ github.workspace }}"
         
     - name: Lint with flake8
       run: |
@@ -48,6 +61,14 @@ jobs:
       with:
         python-version: '3.11'
         
+    - name: Cache pip packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml', '**/setup.py', '**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+          
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -65,13 +86,21 @@ jobs:
       run: |
         docker-compose up -d
 
-    - name: Run unit tests
+    - name: Set Python Path
       run: |
-        pytest tests/ --cov=src --cov-report=xml -v
+        echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
+        echo "Setting PYTHONPATH to ${{ github.workspace }}"
+        
+    - name: Run unit tests
+      env:
+        PYTHONPATH: ${{ github.workspace }}
+      run: |
+        pytest tests/ --cov=src --cov-report=xml --cov-report=term -v
         
     - name: Run integration tests
       env:
         # Use environment variables for services running in Docker
+        PYTHONPATH: ${{ github.workspace }}
         REDIS_HOST: localhost
         MINIO_HOST: localhost:9000
         MINIO_ACCESS_KEY: minioadmin
@@ -85,6 +114,11 @@ jobs:
       run: |
         docker-compose logs
         
+    - name: Upload coverage reports
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: false
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
