--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e ".[test]"
+        pip install -r requirements.txt
         
     - name: Setup Docker
       uses: docker/setup-buildx-action@v2
