fix(ci): Set worker env vars in compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,6 @@ services:
     networks:
       - neuralk-network
 
-  # Worker service for processing ML jobs
   worker:
     build:
       context: .
@@ -62,6 +61,9 @@ services:
         limits:
           cpus: 1
           memory: 1024M
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     depends_on:
       redis:
         condition: service_healthy
