fix(ci): Set server host in compose

--- a/deploy/docker/server/Dockerfile
+++ b/deploy/docker/server/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.11-slim
 
 WORKDIR /neuralk
 
+RUN apt-get update && apt-get install -y curl && apt-get clean
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
