--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,13 @@ services:
       dockerfile: deploy/docker/server/Dockerfile
     ports:
       - "8080:8080"
+    environment:
+      - SERVER_HOST=0.0.0.0
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - MINIO_HOST=minio:9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
     depends_on:
       redis:
         condition: service_healthy
@@ -88,6 +95,12 @@ services:
     restart: unless-stopped
     networks:
       - neuralk-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
 networks:
   neuralk-network:
