--- a/deploy/docker/server/Dockerfile
+++ b/deploy/docker/server/Dockerfile
@@ -2,17 +2,17 @@ FROM python:3.11-slim
 
 WORKDIR /neuralk
 
+RUN apt-get update && apt-get install -y curl && apt-get clean
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY server.py .
-COPY ml.py .
-COPY worker.py .
-COPY config.py .
-COPY logger.py .
+COPY src/api/ src/api/
+COPY src/utils/ src/utils/
+COPY src/core/ src/core/
 
-COPY deploy/docker/server/.env .
+ENV PYTHONPATH="${PYTHONPATH}:/neuralk/src/api:/neuralk/src/utils:/neuralk/src/core"
 
 EXPOSE 8080
 
-CMD ["python", "server.py"]
+CMD ["python", "src/api/server.py"]
