--- a/deploy/docker/worker/Dockerfile
+++ b/deploy/docker/worker/Dockerfile
@@ -9,7 +9,6 @@ COPY src/api/ src/api/
 COPY src/utils/ src/utils/
 COPY src/core/ src/core/
 
-ENV PYTHONPATH="${PYTHONPATH}:/neuralk/src/api:/neuralk/src/utils:/neuralk/src/core"
-ENV OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
+ENV PYTHONPATH="${PYTHONPATH}:/neuralk/src/"
 
 CMD ["python", "src/core/worker.py"]
