--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,75 @@
-cloudpickle
-minio
-numpy
-polars
-python-dotenv
-redis
-requests
-rq
-rq-dashboard
-scikit-learn
-setproctitle
-pytest
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+arrow==1.3.0
+black==25.1.0
+blinker==1.9.0
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpickle==3.1.1
+Flask==3.1.1
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+idna==3.10
+importlib_metadata==8.7.0
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.1
+MarkupSafe==3.0.2
+minio==7.2.16
+mypy_extensions==1.1.0
+numpy==2.3.2
+opentelemetry-api==1.36.0
+opentelemetry-distro==0.57b0
+opentelemetry-exporter-otlp==1.36.0
+opentelemetry-exporter-otlp-proto-common==1.36.0
+opentelemetry-exporter-otlp-proto-grpc==1.36.0
+opentelemetry-exporter-otlp-proto-http==1.36.0
+opentelemetry-instrumentation==0.57b0
+opentelemetry-instrumentation-asyncio==0.57b0
+opentelemetry-instrumentation-click==0.57b0
+opentelemetry-instrumentation-dbapi==0.57b0
+opentelemetry-instrumentation-flask==0.57b0
+opentelemetry-instrumentation-jinja2==0.57b0
+opentelemetry-instrumentation-logging==0.57b0
+opentelemetry-instrumentation-redis==0.57b0
+opentelemetry-instrumentation-requests==0.57b0
+opentelemetry-instrumentation-sqlite3==0.57b0
+opentelemetry-instrumentation-threading==0.57b0
+opentelemetry-instrumentation-urllib==0.57b0
+opentelemetry-instrumentation-urllib3==0.57b0
+opentelemetry-instrumentation-wsgi==0.57b0
+opentelemetry-proto==1.36.0
+opentelemetry-sdk==1.36.0
+opentelemetry-semantic-conventions==0.57b0
+opentelemetry-util-http==0.57b0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.6.0
+polars==1.32.0
+protobuf==6.32.0
+pycparser==2.22
+pycryptodome==3.23.0
+Pygments==2.19.2
+pytest==8.4.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+redis==6.3.0
+Redis-Sentinel-Url==1.0.1
+requests==2.32.4
+rq==2.4.1
+rq-dashboard==0.8.5
+scikit-learn==1.7.1
+scipy==1.16.1
+setproctitle==1.3.6
+six==1.17.0
+threadpoolctl==3.6.0
+types-python-dateutil==2.9.0.20250708
+typing_extensions==4.14.1
+urllib3==2.5.0
+Werkzeug==3.1.3
+wrapt==1.17.3
+zipp==3.23.0
