feat: Add prometheus

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,6 +141,7 @@ services:
     profiles:
       - dev
 
+# Observability components
   opentelemetry-collector:
     image: otel/opentelemetry-collector-contrib:latest
     volumes:
@@ -150,19 +151,36 @@ services:
     ports:
       - "4317:4317"  # gRPC
       - "4318:4318"  # HTTP
+      - "8888:8888"   # Prometheus metrics
+      - "8889:8889"   # Prometheus exporter metrics
     networks:
       - neuralk-network
-    # profiles:
-    #   - monitoring
     depends_on:
       - jaeger
-    
+      - prometheus
+
+  prometheus:
+    image: prom/prometheus:latest
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    volumes:
+      - ./deploy/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
+    ports:
+      - "9090:9090"
+    networks:
+      - neuralk-network
+
   jaeger:
     image: jaegertracing/all-in-one:latest
     ports:
       - "16686:16686"  # UI
       - "14250:14250"  # gRPC
-      # - "4317:4317"  # OTLP
     environment:
       - COLLECTOR_OTLP_ENABLED=true
     networks:
@@ -176,4 +194,6 @@ volumes:
   redis-data:
     driver: local
   minio-data:
+    driver: local
+  prometheus-data:
     driver: local
