--- a/deploy/otel/otel-collector-config.yaml
+++ b/deploy/otel/otel-collector-config.yaml
@@ -10,21 +10,31 @@ processors:
   batch:
     timeout: 1s
     send_batch_size: 1024
+
   memory_limiter:
     limit_mib: 512
     check_interval: 30s
+
+  resource:
+    attributes:
+      - key: environment
+        value: docker-compose
+        action: insert
 
 exporters:
   otlp:
     endpoint: jaeger:4317
     tls:
       insecure: true
-  
+
   debug:
     verbosity: detailed
 
   prometheus:
     endpoint: "0.0.0.0:8889"
+    namespace: "otel"
+    const_labels:
+      environment: "docker-compose"
 
 extensions:
   health_check:
@@ -42,7 +52,7 @@ service:
 
     metrics:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
+      processors: [memory_limiter, resource, batch]
       exporters: [prometheus, debug]
     
     logs:
