feat: Add Grafana dashboards and compose profiles

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -86,6 +86,16 @@ tasks:
     cmds:
       - docker compose down {{.CLI_ARGS}}
 
+  "run:compose:logs":
+    desc: View Docker Compose logs
+    cmds:
+      - docker compose logs -f
+
+  "run:compose:scale":
+    desc: Scale Docker Compose workers
+    cmds:
+      - docker compose up --detach --scale worker={{.WORKER_COUNT | default 3}}
+
   cleanup:
     desc: Cleanup Docker resources (containers, images, volumes...)
     cmds:
