--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,14 @@ services:
     restart: unless-stopped
     networks:
       - neuralk-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          cpus: '0.1'
+          memory: 128M
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 5s
@@ -15,30 +23,43 @@ services:
 
   minio:
     image: minio/minio:latest
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
+        reservations:
+          cpus: '0.2'
+          memory: 256M
     ports:
       - "9000:9000"  # API
       - "9001:9001"  # Console
+    networks:
+      - neuralk-network
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
-    volumes:
-      - minio-data:/data
     command: server /data --console-address ":9001"
     restart: unless-stopped
-    networks:
-      - neuralk-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 10s
       timeout: 5s
       retries: 5
+    volumes:
+      - minio-data:/data
 
   # Initialize MinIO on startup
   init_minio:
     image: minio/mc
-    depends_on:
-      minio:
-        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: '0.2'
+          memory: 128M
+        reservations:
+          cpus: '0.05'
+          memory: 32M
     entrypoint: >
       /bin/sh -c "
       mc alias set neuralk http://minio:9000 minioadmin minioadmin &&
@@ -48,17 +69,23 @@ services:
       "
     networks:
       - neuralk-network
+    depends_on:
+      minio:
+        condition: service_healthy
 
   worker:
     build:
       context: .
       dockerfile: deploy/docker/worker/Dockerfile
     deploy:
-      replicas: 3
+      replicas: 1
       resources:
         limits:
-          cpus: 1
-          memory: 1024M
+          cpus: '1.0'
+          memory: 1G
+        reservations:
+          cpus: '0.2'
+          memory: 256M
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -89,28 +116,31 @@ services:
       - OTEL_SERVICE_NAME=neuralk-server
       - OTEL_SERVICE_VERSION=1.0.0
       - OTEL_RESOURCE_ATTRIBUTES=service.name=neuralk-server,service.version=1.0.0
-    depends_on:
-      redis:
-        condition: service_healthy
-      minio:
-        condition: service_healthy
-    restart: unless-stopped
     networks:
       - neuralk-network
     command: ["opentelemetry-instrument", "--logs_exporter", "otlp", "python", "src/api/server.py"]
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
       timeout: 5s
       retries: 3
       start_period: 10s
-      
+    depends_on:
+      redis:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+  
   # Envoy as the main proxy for all services
   envoy:
     image: envoyproxy/envoy:v1.24-latest
     ports:
       - "8080:8080"  # Main proxy port
       - "9901:9901"  # Admin interface
+    networks:
+      - neuralk-network
+    restart: unless-stopped
     volumes:
       - ./deploy/envoy/envoy.yaml:/etc/envoy/envoy.yaml:ro
     depends_on:
@@ -118,16 +148,8 @@ services:
         condition: service_healthy
       minio:
         condition: service_healthy
-    restart: unless-stopped
-    networks:
-      - neuralk-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9901/ready"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 5s
-      
+
+# Dev tooling (run only when --profile dev)
   redis-commander:
     image: rediscommander/redis-commander:latest
     environment:
@@ -141,11 +163,9 @@ services:
     profiles:
       - dev
 
-# Observability components
+# Observability components (run only when --profile observability)
   opentelemetry-collector:
     image: otel/opentelemetry-collector-contrib:latest
-    volumes:
-      - ./deploy/otel/otel-collector-config.yaml:/etc/otelcol/config.yaml:ro
     command: ["--config", "/etc/otelcol/config.yaml"]
     restart: unless-stopped
     ports:
@@ -155,9 +175,13 @@ services:
       - "8889:8889"   # Prometheus exporter metrics
     networks:
       - neuralk-network
+    volumes:
+      - ./deploy/observability/otel/otel-collector-config.yaml:/etc/otelcol/config.yaml:ro
     depends_on:
       - jaeger
       - prometheus
+    profiles:
+      - observability
 
   prometheus:
     image: prom/prometheus:latest
@@ -168,49 +192,54 @@ services:
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--storage.tsdb.retention.time=200h'
       - '--web.enable-lifecycle'
-    volumes:
-      - ./deploy/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus-data:/prometheus
     ports:
       - "9090:9090"
     networks:
       - neuralk-network
+    volumes:
+      - ./deploy/observability/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
+    profiles:
+      - observability
 
   jaeger:
     image: jaegertracing/all-in-one:latest
     ports:
       - "16686:16686"  # UI
       - "14250:14250"  # gRPC
-    environment:
-      - COLLECTOR_OTLP_ENABLED=true
     networks:
       - neuralk-network
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    profiles:
+      - observability
 
   grafana:
     image: grafana/grafana:latest
     ports:
       - "3000:3000"
+    networks:
+      - neuralk-network
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_SECURITY_ADMIN_USER=admin
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_INSTALL_PLUGINS=redis-datasource
-    volumes:
-      - grafana-data:/var/lib/grafana
-      - ./deploy/grafana/provisioning:/etc/grafana/provisioning:ro
-      - ./deploy/grafana/dashboards:/var/lib/grafana/dashboards:ro
-    depends_on:
-      - prometheus
     restart: unless-stopped
-    networks:
-      - neuralk-network
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:3000/api/health || exit 1"]
       interval: 30s
       timeout: 5s
       retries: 3
       start_period: 10s
-
+    depends_on:
+      - prometheus
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./deploy/observability/grafana/provisioning:/etc/grafana/provisioning:ro
+      - ./deploy/observability/grafana/dashboards:/var/lib/grafana/dashboards:ro
+    profiles:
+      - observability
 
 networks:
   neuralk-network:
