feat: Add instrumentation to worker

--- a/deploy/docker/worker/Dockerfile
+++ b/deploy/docker/worker/Dockerfile
@@ -11,4 +11,6 @@ COPY src/core/ src/core/
 
 ENV PYTHONPATH="${PYTHONPATH}:/neuralk/src/"
 
+RUN opentelemetry-bootstrap -a install
+
 CMD ["python", "src/core/worker.py"]
