--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 arrow==1.3.0
-black==25.1.0
 blinker==1.9.0
 certifi==2025.8.3
 cffi==1.17.1
@@ -20,7 +19,7 @@ joblib==1.5.1
 MarkupSafe==3.0.2
 minio==7.2.16
 mypy_extensions==1.1.0
-numpy==2.3.2
+numpy
 opentelemetry-api==1.36.0
 opentelemetry-distro==0.57b0
 opentelemetry-exporter-otlp==1.36.0
