--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,74 @@
+argon2-cffi
+argon2-cffi-bindings
+arrow
+blinker
+certifi
+cffi
+charset-normalizer
+click
 cloudpickle
+Flask
+googleapis-common-protos
+grpcio
+idna
+importlib_metadata
+iniconfig
+itsdangerous
+Jinja2
+joblib
+MarkupSafe
 minio
+mypy_extensions
 numpy
+opentelemetry-api
+opentelemetry-distro
+opentelemetry-exporter-otlp
+opentelemetry-exporter-otlp-proto-common
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-exporter-otlp-proto-http
+opentelemetry-instrumentation
+opentelemetry-instrumentation-asyncio
+opentelemetry-instrumentation-click
+opentelemetry-instrumentation-dbapi
+opentelemetry-instrumentation-flask
+opentelemetry-instrumentation-jinja2
+opentelemetry-instrumentation-logging
+opentelemetry-instrumentation-redis
+opentelemetry-instrumentation-requests
+opentelemetry-instrumentation-sqlite3
+opentelemetry-instrumentation-threading
+opentelemetry-instrumentation-urllib
+opentelemetry-instrumentation-urllib3
+opentelemetry-instrumentation-wsgi
+opentelemetry-proto
+opentelemetry-sdk
+opentelemetry-semantic-conventions
+opentelemetry-util-http
+packaging
+pathspec
+platformdirs
+pluggy
 polars
+protobuf
+pycparser
+pycryptodome
+Pygments
+pytest
+python-dateutil
 python-dotenv
 redis
+Redis-Sentinel-Url
 requests
 rq
 rq-dashboard
 scikit-learn
+scipy
 setproctitle
-pytest
+six
+threadpoolctl
+types-python-dateutil
+typing_extensions
+urllib3
+Werkzeug
+wrapt
+zipp
